# nai3_train

./: .env.example  .gitignore  README.md  README_EN.md  clear.py  config.toml  cut.py  nai3tagger.py  nai3tagger.py.py  pyproject.toml  random_artist.py  random_artist_weight.py  random_characetrs.py  random_characetrs_expression.py  random_prompt.py  requirements.txt  run_UTF-8.py  run_clear.py  run_cut.py  webui.py
app/: request.py  settings.py
json/: arknights_ge_50.json  genshin.json  test_game_azurlane.json  test_game_bluearchive.json  test_game_fgo.json  test_game_girlsfrontline.json  test_game_neuralcloud.json  test_game_nikke.json  test_game_starrail.json
prompt/: 00027-0-105711349_p0.txt  00056-0-101025143_p0.txt  00068-0-91403597_p0.txt  00072-0-92651749_p0.txt  00078-0-93615473_p1.txt  00081-0-95096482_p1.txt  00089-0-96376249_p0.txt  00092-0-98000887_p0.txt  00095-0-99435221_p0.txt  00097-0-99705946_p0.txt  00223.txt  00319.txt  00419.txt  00420.txt  00424.txt  00432.txt  1.txt  2022-013.txt  2022-015.txt  2022-049.txt  2022-065.txt  2022-096.txt  2022-097.txt  2022-107.txt  2022-110.txt  2022-113.txt  2022-114.txt  2022-117.txt  2023-001.txt  2023_060.txt  2023_061.txt
utils/: artist.py  tools.py  utils.py
